infra/openfga/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openfga
  labels:
    app.kubernetes.io/name: openfga
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
    - port: 8081
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: openfga
